# SGLib

./: .gitignore  01_generate_stationary_ensemble.py  02_plot_ensemble_diagnostics.py  02_prep_pywrdrb_inputs.py  03_run_pywrdrb_simulations_parallel.py  03_run_pywrdrb_simulations_serial.py  0x_plot_gridded_fdcs.py  0x_plot_pywrdrb_dynamics.py  LICENSE  README.md  config.py  explore_lhs_space.ipynb  piep.py  prep_pywrdrb_inputs.py  pyproject.toml  requirements.txt  setup.py  test_kn.py  usgs_daily_streamflow_cms.csv
examples/: ThomasFiering_demo.ipynb  autoregressive.ipynb  explore_ensemble_outputs.ipynb  getting_started.ipynb  hmm.ipynb  kirsch_nowak_example.ipynb  plot_gridded_fdcs.ipynb  plotting_examples.ipynb
examples/example_data/: retrieve_example_data.py  usgs_daily_streamflow_cms.csv  usgs_monthly_streamflow_cms.csv
outputs/: Kirsh_Q_syn.csv  kn_ensemble.h5
pywrdrb/inputs/stationary_ensemble/: predicted_inflows_mgd.hdf5
pywrdrb/models/: model.json
sglib/core/: base.py
sglib/droughts/: ssi.py
sglib/methods/: __init__.py  abstract_method.py
sglib/methods/nonparametric/: draft_krisch_nowak.py  kirsch.py  kirsch_nowak.py
sglib/methods/parametric/: ThomasFiering.py  __init__.py  hmm.py  thomas_fiering.py
sglib/methods/temporal_disaggregation/: nowak.py
sglib/plotting/: drought.py  hmm_plots.py  plot.py
sglib/utils/: __init__.py  assertions.py  directories.py  ensemble_manager.py  kwargs.py  load.py
sglib/verification/: drought.py
src/sglib/: __init__.py
src/sglib/core/: base.py  utilities.py
src/sglib/utils/: load.py  (+5 more)
tests/: test_kn.py
(+11 files in other folders)
